Extend ReplicationConfig to contain streams to replicate for different replication models.
Currently, a single replication config(set of streams to replicate) is
required.  As new replication models and clients are added, each will
have its own config which LR should build and maintain.